{"message":"Update file: _config.yml","userId":"4861","fileName":"_config.yml"}

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Title
+title: Indo-Pacific Economic Framework for Prosperity
 url: https://www.ipef.gov.sg
 favicon: /images/favicon-isomer.ico
 colors:
