{"message":"Update file: _config.yml","userId":"4861","fileName":"_config.yml"}

--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ plugins:
 staging: https://staging-lite.d328z8av3qhxtv.amplifyapp.com
 prod: https://master.d2wnxy28hw957.amplifyapp.com
 facebook-pixel: ""
-shareicon: /images/isomer-logo.svg
+shareicon: /images/ipef.png
 is_government: false
 google_analytics_ga4: ""
 linkedin-insights: ""
