{"message":"Update file: _config.yml","userId":"4861","fileName":"_config.yml"}

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Indo-Pacific Economic Framework for Prosperity
 url: https://www.ipef.gov.sg
-favicon: /images/favicon-isomer.ico
+favicon: /images/ipef__1_.png
 colors:
   primary-color: "#6031b6"
   secondary-color: "#4372d6"
