{"message":"Update file: navigation.yml","userId":"153","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ links:
   - title: About
     url: /about-ipef
   - title: More info
-    url: /permalink
+    url: /leaders-ministerial-meetings
     sublinks:
       - title: Leaders & Ministerial Meetings
         url: /leaders-ministerial-meetings
