{"message":"Update file: navigation.yml","userId":"4861","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,8 +7,8 @@ links:
     sublinks:
       - title: Leaders & Ministerial Meetings
         url: /leaders-ministerial-meetings
-      - title: Pillars and Agreements
-        url: /pillars-and-finalised-agreements
+      - title: IPEF Pillars and Agreements
+        url: /ipef-pillars-and-agreements
       - title: Public Consultations
         url: /public-consultations
   - title: Contact Us
